Add API evolution features (#39)
